--- a/SQLiteToExcelExporter.csproj
+++ b/SQLiteToExcelExporter.csproj
@@ -1,20 +1,19 @@
-&lt;Project Sdk="Microsoft.NET.Sdk"&gt;
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
-  &lt;PropertyGroup&gt;
-    &lt;OutputType&gt;Exe&lt;/OutputType&gt;
-    &lt;TargetFramework&gt;net8.0&lt;/TargetFramework&gt;
-    &lt;ImplicitUsings&gt;enable&lt;/ImplicitUsings&gt;
-    &lt;Nullable&gt;enable&lt;/Nullable&gt;
-  &lt;/PropertyGroup&gt;
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
+    <PackageReference Include="NPOI" Version="2.6.2" />
+  </ItemGroup>
 
-  &lt;ItemGroup&gt;
-    &lt;PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" /&gt;
-    &lt;PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1"&gt;
-      &lt;IncludeAssets&gt;runtime; build; native; contentfiles; analyzers; buildtransitive&lt;/IncludeAssets&gt;
-      &lt;PrivateAssets&gt;all&lt;/PrivateAssets&gt;
-    &lt;/PackageReference&gt;
-    &lt;PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" /&gt;
-    &lt;PackageReference Include="NPOI" Version="2.6.2" /&gt;
-  &lt;/ItemGroup&gt;
-
-&lt;/Project&gt;
+</Project>
